[package]
name = "easyharun_server"
version = "0.1.0"
edition = "2021"

[dependencies]
easyharun_lib = {path = "./../easyharun_lib"}
easyact = {path = "./../easyact"}
tokio = {version = "1.*", features=["full"]}
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "*"
structopt = { version = "0.3", features = [ "default" ] }
lazy_static = "1.*"
bollard = "*"
futures = "0.3"
notify = "5.*"
reqwest = { version="0.11.*", features=["rustls-tls"] }
async-trait = "0.1.*"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]