[package]
name = "easyharun_test_container"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.*", features=["full"]}
tonic = "0.9"
prost = "0.11"
async-trait = "*"
anyhow = "*"
axum = "0.6.*"

[lib]
name = "easyharun_test_container"
path = "src/lib.rs"

[[bin]]
name = "easyharun_test_container"
path = "src/main.rs"

[build-dependencies]
tonic-build = {version = "0.9", features = ["prost"] }

